- Fixed bug #60373 (Startup errors with log_errors on cause segfault).

git-svn-id: http://svn.php.net/repository/php/php-src/trunk@319823 c90b9560-bf6c-de11-be94-00142212c4b1